@@ -23,11 +23,9 @@ import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.metastore.ReplChangeManager;
 import org.apache.hadoop.hive.metastore.api.GetAllWriteEventInfoRequest;
-import org.apache.hadoop.hive.metastore.api.MetaException;
 import org.apache.hadoop.hive.metastore.api.NotificationEvent;
 import org.apache.hadoop.hive.metastore.api.WriteEventInfo;
 import org.apache.hadoop.hive.metastore.messaging.CommitTxnMessage;
-import org.apache.hadoop.hive.metastore.messaging.json.JSONMessageEncoder;
 import org.apache.hadoop.hive.metastore.messaging.MessageBuilder;
 import org.apache.hadoop.hive.metastore.utils.StringUtils;
 import org.apache.hadoop.hive.ql.exec.repl.util.ReplUtils;
@@ -62,7 +60,7 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
 
   private void writeDumpFiles(Table qlMdTable, Partition ptn, Iterable<String> files, Context withinContext,
                               Path dataPath)
-          throws IOException, LoginException, MetaException, HiveFatalException, SemanticException {
+          throws IOException, LoginException, HiveFatalException, SemanticException {
     boolean copyAtLoad = withinContext.hiveConf.getBoolVar(HiveConf.ConfVars.REPL_RUN_DATA_COPY_TASKS_ON_TARGET);
     if (copyAtLoad) {
       // encoded filename/checksum of files, write into _files
@@ -76,14 +74,14 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
 
   private void createDumpFile(Context withinContext, org.apache.hadoop.hive.ql.metadata.Table qlMdTable,
                   List<Partition> qlPtns, List<List<String>> fileListArray)
-          throws IOException, SemanticException, LoginException, MetaException, HiveFatalException {
+          throws IOException, SemanticException, LoginException, HiveFatalException {
     if (fileListArray == null || fileListArray.isEmpty()) {
       return;
     }
 
     Path metaDataPath = new Path(withinContext.eventRoot, EximUtil.METADATA_NAME);
     // In case of ACID operations, same directory may have many other subdirectory for different write id stmt id
-    // combination. So we can not set isreplace to true.
+    // combination. So we can not set isReplace to true.
     withinContext.replicationSpec.setIsReplace(false);
     EximUtil.createExportDump(metaDataPath.getFileSystem(withinContext.hiveConf), metaDataPath,
             qlMdTable, qlPtns,
@@ -92,7 +90,7 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
 
     if ((null == qlPtns) || qlPtns.isEmpty()) {
       Path dataPath = new Path(withinContext.eventRoot, EximUtil.DATA_PATH_NAME);
-      writeDumpFiles(qlMdTable, null, fileListArray.get(0), withinContext, dataPath);
+      writeDumpFiles(qlMdTable, null, fileListArray.getFirst(), withinContext, dataPath);
     } else {
       for (int idx = 0; idx < qlPtns.size(); idx++) {
         Path dataPath = new Path(withinContext.eventRoot, EximUtil.DATA_PATH_NAME + File.separator
@@ -104,7 +102,7 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
 
   private void createDumpFileForTable(Context withinContext, org.apache.hadoop.hive.ql.metadata.Table qlMdTable,
                     List<Partition> qlPtns, List<List<String>> fileListArray)
-          throws IOException, SemanticException, LoginException, MetaException, HiveFatalException {
+          throws IOException, SemanticException, LoginException, HiveFatalException {
     Path newPath = HiveUtils.getDumpPath(withinContext.eventRoot, qlMdTable.getDbName(), qlMdTable.getTableName());
     Context context = new Context(withinContext);
     context.setEventRoot(newPath);
@@ -191,7 +189,7 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
                   .orElse(Collections.emptyList())
                   .stream()
                   .map(StringUtils::normalizeIdentifier)
-                  .collect(Collectors.toList());
+                  .toList();
 
 //                                        Truth Table
 //     Operation                | writeIds | writeEventInfoList | databases | allWriteEventInfoExceptMV  | Output
@@ -223,11 +221,11 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
       if (numEntry != 0) {
         eventMessage.addWriteEventInfo(writeEventInfoList);
         payload = jsonMessageEncoder.getSerializer().serialize(eventMessage);
-        LOG.debug("payload for commit txn event : " + eventMessageAsJSON);
+          LOG.debug("payload for commit txn event : {}", eventMessageAsJSON);
       }
 
       org.apache.hadoop.hive.ql.metadata.Table qlMdTablePrev = null;
-      org.apache.hadoop.hive.ql.metadata.Table qlMdTable = null;
+      org.apache.hadoop.hive.ql.metadata.Table qlMdTable;
       List<Partition> qlPtns = new ArrayList<>();
       List<List<String>> filesTobeAdded = new ArrayList<>();
 
